# Random

./: Platform.Random.csproj  Platform.Random.sln  README.html  README.md  RandomExtensions.cs  RandomHelpers.cs  index.html  index.json  manifest.json  publish-docs.sh  toc.html  xrefmap.yml
api/: Platform.Random.RandomExtensions.html  Platform.Random.RandomHelpers.html  Platform.Random.html  toc.html
cpp/: CMakeLists.txt  conanfile.txt  install-local-conan-dependencies.sh  vcpkg.json
cpp/Platform.Random/: Platform.Random.TemplateLibrary.nuspec  Platform.Random.h  RandomExtensions.h  RandomHelpers.h
cpp/Platform.Random.Tests/: AllTests.cpp  CMakeLists.txt  RandomExtensionsTests.cpp  RandomHelpersTests.cpp
csharp/: Platform.Random.sln  README.html  index.html  index.json  manifest.json  toc.html  xrefmap.yml
csharp/Platform.Random/: Platform.Random.csproj  RandomExtensions.cs  RandomHelpers.cs
csharp/Platform.Random.Tests/: Platform.Random.Tests.csproj  RandomExtensionsTests.cs  RandomHelpersTests.cs
csharp/api/: Platform.Random.RandomExtensions.html  Platform.Random.RandomHelpers.html  Platform.Random.html
